# chess

./: .#order.hpp  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile-old  Makefile.cpu  Makefile.gpu  README.md  ReadMe.txt  Reyka.sln  Reyka.vcxproj  bench.cpp  bench.h  bitboards.cpp  bitboards.h  bits.h  board.cpp  board.h  board_manager.h  book.cpp  book.h  build.h  clock_manager.h  date_time.h  debug_manager.cpp  debug_manager.h  definitions.h  endgame.cpp  endgame.h  engine-default.conf  engine-tuned.conf  engine.conf  engine_debug_config.xml  engine_tuning_config.xml  epd.hpp  eval.nb  eval_optimize.cpp  eval_pawn_island_mg.cpp  evaltables.h  (+89 more)
eval/: eval.cpp  eval.h  eval_material.cpp  eval_optimize.cpp  eval_pawns.cpp
eval/eg/: eval_backward_pawn_eg.cpp  eval_blockade_eg.cpp  eval_doubled_pawn_eg.cpp  eval_isolated_pawn_eg.cpp  eval_king_eg.cpp  eval_kpk_eg.cpp  eval_material_eg.cpp  eval_passed_pawn_eg.cpp  eval_pawn_island_eg.cpp  eval_pawn_majority_eg.cpp  eval_pawn_squarese_eg.cpp  eval_undermine_eg.cpp  squares_eg.h
eval/mg/: eval_backward_pawn_mg.cpp  eval_blockade_mg.cpp  eval_doubled_pawn_mg.cpp  eval_isolated_pawn_mg.cpp  eval_king_mg.cpp  eval_knight_mg.cpp  eval_material_mg.cpp  eval_passed_pawn_mg.cpp  eval_pawn_island_mg.cpp  eval_pawn_majority_mg.cpp  eval_pawn_squares_mg.cpp  squares_mg.h
evaluation/: eval.nb
regression/: #regression.sh#  cutechess-cli  master  regression.csv  regression.sh
regression/fishtest/: AUTHORS.txt  README.txt  stats.py
tuning/: Makefile  data.txt  main.cpp  material_tune.h  pbil.h  pbil.hpp  pgn.cpp  pgn.h
tuning/pbil/: pbil.h  pbil.hpp
tuning/pso/: pso.h
tuning/random/: ars.h
tuning/sgd/: sgd.h
